Meta Boxes: Fix style comment whitespace

--- a/edit-post/components/meta-boxes/meta-boxes-area/style.scss
+++ b/edit-post/components/meta-boxes/meta-boxes-area/style.scss
@@ -2,9 +2,13 @@
 .edit-post-meta-boxes-area {
 	position: relative;
 
-    /** The wordpress default for most meta-box elements is content-box. Some elements, such as textarea and input, are
-    set to border-box in forms.css. These elements are therefore specifically set back to border-box here, while other
-    elements (such as .button) are unaffected by Gutenberg's style because of their higher specificity. */
+	/**
+	 * The wordpress default for most meta-box elements is content-box. Some
+	 * elements such as textarea and input are set to border-box in forms.css.
+	 * These elements therefore specifically set back to border-box here, while
+	 * other elements (such as .button) are unaffected by Gutenberg's style
+	 * because of their higher specificity.
+	 */
 	* {
 		box-sizing: content-box;
 	}
